# cognitive-twin-agent

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md  agent_config.example.json  requirements-multimodal.txt  requirements-voice.txt  requirements.txt  system_dna.md
benchmarks/: latest_sentiment_report.md  sentiment_samples.jsonl
cognitive_twin/: __init__.py  _xtts_say.py  activity.py  app_context.py  brain.py  cli.py  control.py  council.py  email_triage.py  media.py  mem_types.py  memory.py  mood.py  onboarding.py  persona.py  photos.py  presence.py  rhythms.py  shadow.py  soul.py  twin_package.py  twins.py  vault.py  viz.py  voice_clone.py  voice_profile.py  watch.py  watch_review.py
core/: Cargo.toml  README.md  build-xcframework.sh
core/examples/: ask.rs
core/include/: cognitive_twin_core.h
core/src/: agent.rs  lib.rs  llm.rs  memory.rs  persona.rs  router.rs  wasm.rs
deployment/: com.cognitive.twin.agent.plist.example
docs/: behavior-spec.md  brain-widget.html  critique-ledger.md  customer-journey-map.md  hitl-training.md  index.html  memory-ia.md  prompt-relevance-review.md  unhosted-integration.md
examples/: few-shot-index.md
ios/: README.md  build-ios.sh  project.yml
policies/: memory-governance.policy.json  model-routing.policy.json  multidevice-trust-sync.policy.json
prompts/: system.prompt.md
scripts/: clone-voice-from-video.sh  setup-voice-clone.sh  update-vera.sh  voice_ab.py
src/: action_executor.py  activity_service.py  assistant_daemon.py  audio_service.py  benchmark_sentiment.py  calibration.py  camera_service.py  (+15 more)
(+80 files in other folders)
