[package]
name = "cognitive-twin-core"
version = "0.1.0"
edition = "2021"
description = "Portable core for the Cognitive Twin — persona, memory, routing, and the agent loop. Compiles to macOS, iOS, Windows, Linux, Android, and WASM."
license = "MIT"

[lib]
# rlib for Rust consumers; staticlib/cdylib so Swift (iOS/macOS) and C can link it.
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# (tests use std only)
