[package]
name = "cognitive-twin-core"
version = "0.1.0"
edition = "2021"
description = "Portable core for the Cognitive Twin — persona, memory, routing, and the agent loop. Compiles to macOS, iOS, Windows, Linux, Android, and WASM."
license = "AGPL-3.0-or-later"

[lib]
# rlib for Rust consumers; staticlib/cdylib so Swift (iOS/macOS) and C can link it.
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only: expose the core to JavaScript in the browser. Native builds (macOS,
# iOS) don't pull these in, so the C FFI / desktop paths are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
# (tests use std only)
